--- a/css/grid.css
+++ b/css/grid.css
@@ -1,6 +1,8 @@
 .row {
   margin-left: -15px;
   margin-right: -15px;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
