--- a/css/GusStyles.css
+++ b/css/GusStyles.css
@@ -36,7 +36,7 @@ body {
 }
 
 a {
-  color: #acb7c0;
+  color: white;
   text-decoration: none;
   font-family: "Open Sans", sans-serif;
 }
@@ -502,6 +502,24 @@ header h1 {
     transform: translateX(0);
   }
 }
+.button {
+    background-color: #4e5359 ;
+    color: white;
+    cursor: pointer;
+    width: 150%;
+    text-align: left;
+    font-size: 100%;
+
+    padding-left:10%;
+    padding-right: 30%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+
+    border-color: #ff0000;
+
+
+
+}
 
 
 /* Style the buttons that are used to open and close the accordion panel */
@@ -522,6 +540,8 @@ button.accordion {
 .accopanel:hover {
   box-shadow: 5px 5px 5px grey;
 }
+
+
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 button.accordion.active, button.accordion:hover {
