--- a/css/grid.css
+++ b/css/grid.css
@@ -4,6 +4,12 @@
   margin-top: 2%;
   margin-bottom: 2%;
 }
+.navrow {
+  margin-left: -5%;
+  margin-right: -5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
   position: relative;
