--- a/css/GusStyles.css
+++ b/css/GusStyles.css
@@ -32,7 +32,7 @@ body {
   font-size: 100%;
   font-family: "Droid Serif", serif;
   color: #6c7d8e;
-  background-color: #eee;
+  background-color: #4e5359;
 }
 
 a {
@@ -42,8 +42,19 @@ a {
 }
 
 img {
-  max-width: 100%;
+    max-width: 100%;
+    border-radius: 2%;
+    padding: 1%;
+    width: 20%;
 }
+
+.imgPanel {
+    max-width: 100%;
+    border-radius: 2%;
+    padding: 1%;
+    width: 60%;
+}
+
 
 h1, h2, h3 {
   margin-top: 2%;
@@ -157,6 +168,7 @@ button.accordion.active, button.accordion:hover {
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
+
     padding: 0 30px;
     background-color: white;
     max-height: 0;
