--- a/css/timeline.css
+++ b/css/timeline.css
@@ -197,7 +197,7 @@
 .cd-timeline-content .cd-date {
   float: left;
   padding: .8em 0;
-  opacity: .7;
+  opacity: 1;
 }
 .cd-timeline-content::before {
   content: '';
