--- a/css/GusGrid.css
+++ b/css/GusGrid.css
@@ -11,7 +11,7 @@
 }
 
 .navfix {
-
+  position: fixed;
 }
 
 
@@ -19,9 +19,9 @@
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
   position: relative;
   min-height: 1%;
-  padding-left: 3%;
+  padding-left: 5%;
   padding-top: 1%;
-  padding-right: 3%;
+  padding-right: 5%;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
