--- a/css/GusStyles.css
+++ b/css/GusStyles.css
@@ -139,6 +139,9 @@ header h1 {
   background-color: #5d6165;
 }
 
+.cuerpo {
+  background-color: rgba(78, 89, 84, 0.2);
+}
 
 /* Style the buttons that are used to open and close the accordion panel */
 button.accordion {
