--- a/css/GusGrid.css
+++ b/css/GusGrid.css
@@ -1,8 +1,8 @@
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: 15%;
+  margin-right: 15%;
   margin-top: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 4%;
 }
 .navrow {
   margin-top: 2%;
