--- a/style-header-nav-footer.css
+++ b/style-header-nav-footer.css
@@ -1,16 +1,16 @@
 
-
 header {
 	background-color:white;
 	position: fixed;
 	top: 0;
-	left: 0;
+	left: 0; 
 	right: 0;
 	width: 100%;
 	float: left;
 	padding: 1em 1em;
 	text-align: center;
 	break-inside: avoid;
+	z-index:2;
 }
 
 header img {
@@ -27,31 +27,29 @@ footer {
 	right: 0;
 	height:4em;
 }
-
-
 /* NAVIGATION */
 #logo {
 	color: white;
-	background-color: white;
+	background-color: white;		
 	display: block;
 	padding: 0.5em;
 	text-decoration: none;
-	float: left;
+	float: left;	
 }
 #logo {
 	width: auto;
-}
+}		
 
-nav,
+nav,                     
   nav ul,
   nav li {           /* Normalisierung */
-    list-style: none;
-    margin: 0;
+    list-style: none; 
+    margin: 0; 
     padding: 0;
     border: 0;
-
+	
   }
-
+  
 nav {
 	background-color: white;
 	padding: 0;
@@ -60,7 +58,7 @@ nav {
 	margin-right:0;
 	margin-left:30%;
 	position:fixed;
-
+	
 	float: right;
 }
 
@@ -79,20 +77,20 @@ nav li{
 }
 
 nav a{
-	display: block;
-	color: black;                  /* Schriftfarbe schwarz */
-	text-decoration: none;         /* Unterstreichung entfernen */
+	display: block;	
+	color: black;                  /* Schriftfarbe schwarz */ 
+	text-decoration: none;         /* Unterstreichung entfernen */  
 	padding:1em 2.5em;
 }
 
-nav a:hover,
+nav a:hover, 
 nav a:active{
 	background-color: #22ab03;
 	color: white;
 }
 
 nav ul ul {
-	margin: 0;
+	margin: 0; 
 	padding: 0;
 	position:absolute;
 	top: 3.2em;
@@ -103,7 +101,8 @@ nav ul ul {
 nav ul li:hover ul {
 	font:inherit;
 	z-index: auto; /* Unternavigation einblenden */
-	background-color: #282828;
+	background-color: white;
+	opacity:0.85;
 }
 
 nav ul ul li {
@@ -116,7 +115,7 @@ nav ul ul li {
 nav ul ul li a{
 	display: block;
     text-decoration: none;
-	color:white;
+	color:black;
     padding-top: 1em;
 	padding-bottom: 1em;
 	padding-left: 1em;
@@ -126,7 +125,7 @@ nav ul ul li a{
 /* Toggle Menü */
 .menue-button {
 	display: none;
-}
+}		
 
 /* CSS erweitern um MENÜ-Button und entsprechende Steuerung */
 /*	Menü-Button oben rechts einblenden bei kleiner als 600px */
@@ -134,7 +133,7 @@ nav ul ul li a{
 	#nav-menue{
 		position:static;
 	}
-
+	
 	.menue-button {
 		display: block;
 	}
@@ -149,7 +148,7 @@ nav ul ul li a{
 		color: white;
 		cursor: pointer;
 		text-decoration: none;
-	}
+	}	
 	#logo {
 		width: 100%;
 	}
@@ -158,21 +157,21 @@ nav ul ul li a{
 		width: 100%;
 		display: none;
 		position:static;
-	}
+	}	
 	#togglesteuerung li {
 		width: 100%;
 		border-bottom: 1px solid silver;
-	}
-
+	}	
+	
 	#togglesteuerung ul ul {
-	margin: 0;
+	margin: 0; 
 	padding: 0;
 	position:static;
 	top: 0;
 	font: 0/0 serif; /* Unternavigation ausblenden */
 	z-index: -1;
 	}
-
+	
 	#togglesteuerung ul li:hover ul {
 	font:inherit;
 	z-index: auto; /* Unternavigation einblenden */
@@ -187,10 +186,21 @@ nav ul ul li a{
 /* die Steuerung einblenden (auch auf mobile Devices) */
 #nav-menue:target #togglesteuerung {
 	display: block;
-
 }
 /* ausblenden des Menü-Buttons zum öffnen - somit wird der zum Schließen sichtbar */
 #nav-menue:target .menue-button-beschr-open {
-	display: none ;
+	display: none ; 
+}
 
+/*FOOTER*/
+footer a{
+	display: block;	
+	color: black;                  /* Schriftfarbe schwarz */ 
+	text-decoration: none;         /* Unterstreichung entfernen */  
+	padding:1em 2.5em;
+}
+
+footer a:hover, 
+footer a:active{
+	color: #22ab03;
 }
