--- a/css/GusStyles.css
+++ b/css/GusStyles.css
@@ -15,8 +15,6 @@ Primary style
 .secondary-text-color  { color: #757575; }
 .divider-color         { border-color: #BDBDBD; }
 
-
-
 html * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -25,7 +23,7 @@ html * {
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  position: relative;
 }
 
 body {
@@ -33,6 +31,7 @@ body {
   font-family: "Droid Serif", serif;
   color: #5d6165;
   background-color: rgba(62, 64, 66, 0.11);
+  box-sizing: border-box;
 }
 
 a {
@@ -153,7 +152,7 @@ header h1 {
 /* Style the buttons that are used to open and close the accordion panel */
 button.accordion {
     background-color: white;
-    color: #009688;
+    color: #4e5359;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -218,4 +217,23 @@ button.accordion.active, button.accordion:hover {
 
 .nameTeam {
   color: #22ab03;
+}
+
+.navrow {
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+
+}
+
+.imgrow {
+  float: right;
+  width: 5%;
+}
+
+.firstrow {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 20%;
+  margin-bottom: 20%;
 }
