--- a/style-header-nav-footer.css
+++ b/style-header-nav-footer.css
@@ -3,7 +3,7 @@ header {
 	background-color:white;
 	position: fixed;
 	top: 0;
-	left: 0; 
+	left: 0;
 	right: 0;
 	width: 100%;
 	float: left;
@@ -30,27 +30,27 @@ footer {
 /* NAVIGATION */
 #logo {
 	color: white;
-	background-color: white;		
+	background-color: white;
 	display: block;
 	padding: 0.5em;
 	text-decoration: none;
-	float: left;	
+	float: left;
 }
 #logo {
 	width: auto;
-}		
+}
 
-nav,                     
-  nav ul,
-  nav li {           /* Normalisierung */
-    list-style: none; 
-    margin: 0; 
+.jessnav,
+  .jessnav ul,
+  .jessnav li {           /* Normalisierung */
+    list-style: none;
+    margin: 0;
     padding: 0;
     border: 0;
-	
+
   }
-  
-nav {
+
+.jessnav {
 	background-color: white;
 	padding: 0;
 	margin-top:5em;
@@ -58,17 +58,17 @@ nav {
 	margin-right:0;
 	margin-left:30%;
 	position:fixed;
-	
+
 	float: right;
 }
 
 
-nav ul {
+.jessnav ul {
 	margin: 0;
 	padding: 0;
 }
 
-nav li{
+.jessnav li{
 	float: left;
 	margin: 0;
 	padding: 0;
@@ -76,21 +76,21 @@ nav li{
 	position: relative;
 }
 
-nav a{
-	display: block;	
-	color: black;                  /* Schriftfarbe schwarz */ 
-	text-decoration: none;         /* Unterstreichung entfernen */  
+.jessnav a{
+	display: block;
+	color: black;                  /* Schriftfarbe schwarz */
+	text-decoration: none;         /* Unterstreichung entfernen */
 	padding:1em 2.5em;
 }
 
-nav a:hover, 
-nav a:active{
+.jessnav a:hover,
+.jessnav a:active{
 	background-color: #22ab03;
 	color: white;
 }
 
-nav ul ul {
-	margin: 0; 
+.jessnav ul ul {
+	margin: 0;
 	padding: 0;
 	position:absolute;
 	top: 3.2em;
@@ -98,21 +98,21 @@ nav ul ul {
 	z-index: -1;
 }
 
-nav ul li:hover ul {
+.jessnav ul li:hover ul {
 	font:inherit;
 	z-index: auto; /* Unternavigation einblenden */
 	background-color: white;
 	opacity:0.85;
 }
 
-nav ul ul li {
+.jessnav ul ul li {
 	display: block;
 	margin:0;
 	float: none;
 	text-align:left;
 }
 
-nav ul ul li a{
+.jessnav ul ul li a{
 	display: block;
     text-decoration: none;
 	color:black;
@@ -125,7 +125,7 @@ nav ul ul li a{
 /* Toggle Menü */
 .menue-button {
 	display: none;
-}		
+}
 
 /* CSS erweitern um MENÜ-Button und entsprechende Steuerung */
 /*	Menü-Button oben rechts einblenden bei kleiner als 600px */
@@ -133,7 +133,7 @@ nav ul ul li a{
 	#nav-menue{
 		position:static;
 	}
-	
+
 	.menue-button {
 		display: block;
 	}
@@ -148,7 +148,7 @@ nav ul ul li a{
 		color: white;
 		cursor: pointer;
 		text-decoration: none;
-	}	
+	}
 	#logo {
 		width: 100%;
 	}
@@ -157,21 +157,21 @@ nav ul ul li a{
 		width: 100%;
 		display: none;
 		position:static;
-	}	
+	}
 	#togglesteuerung li {
 		width: 100%;
 		border-bottom: 1px solid silver;
-	}	
-	
+	}
+
 	#togglesteuerung ul ul {
-	margin: 0; 
+	margin: 0;
 	padding: 0;
 	position:static;
 	top: 0;
 	font: 0/0 serif; /* Unternavigation ausblenden */
 	z-index: -1;
 	}
-	
+
 	#togglesteuerung ul li:hover ul {
 	font:inherit;
 	z-index: auto; /* Unternavigation einblenden */
@@ -189,18 +189,19 @@ nav ul ul li a{
 }
 /* ausblenden des Menü-Buttons zum öffnen - somit wird der zum Schließen sichtbar */
 #nav-menue:target .menue-button-beschr-open {
-	display: none ; 
+	display: none ;
 }
 
 /*FOOTER*/
 footer a{
-	display: block;	
-	color: black;                  /* Schriftfarbe schwarz */ 
-	text-decoration: none;         /* Unterstreichung entfernen */  
+	position: relative;
+	display: block;
+	color: black;                  /* Schriftfarbe schwarz */
+	text-decoration: none;         /* Unterstreichung entfernen */
 	padding:1em 2.5em;
 }
 
-footer a:hover, 
+footer a:hover,
 footer a:active{
 	color: #22ab03;
 }
