--- a/css/timeline.css
+++ b/css/timeline.css
@@ -187,7 +187,7 @@
 .cd-timeline-content .cd-read-more {
   float: right;
   padding: .8em 1em;
-  background: #00BCD4;
+  background: #22ab03;
   color: white;
   border-radius: 0.25em;
 }
