--- a/css/GusModals.css
+++ b/css/GusModals.css
@@ -11,10 +11,12 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    margin-top: 5%;
 }
 
 /* Modal Content */
 .modal-content {
+
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
