--- a/css/GusTags.css
+++ b/css/GusTags.css
@@ -17,7 +17,7 @@ body{
 	margin:0;
 	font-size: small;
 	font-family: Arial, Verdana, sans-serif;
-	color:white;
+	color:#4e5359;
 	background-color:#e9eae9;
 }
 
