--- a/views/faqH.html
+++ b/views/faqH.html
@@ -3,6 +3,11 @@
 I  used the following mockup design as a reference, but the code is mine.
 https://freebiesbug.com/code-stuff/faq-template-html/
 I write the code of all of the css and html resources with my name too.
+
+Questions
+FAQ: https://www.google.com/policies/faq/
+https://support.apple.com/de-de/HT202152
+https://faq.mediamarkt.de/app/answers/list/session/L3RpbWUvMTQ5NDA4NjkxOC9zaWQvZlVNNGFPSWpLRmRZS2NPeVJCS3ozRXZGUXkzTWdLME5sZUl5UkVzem9xWW9kZzVQbyU3RUo0RDQ4OEJBMThVQnhYZDF2WnkwRTlJeE56ekhGdkZybCU3RUI0azFxOU13N09NdWVfd1F3NjlpSHo3ZGFIRzdIMXF6eUpVdyUyMSUyMQ==/c/58
 -->
 <html>
 	<head>
@@ -53,93 +58,86 @@ I write the code of all of the css and html resources with my name too.
 						<h1 class="faqsection">Erste Schritte</h1>
 						<section id="first">
 							<div class="accopanel">
-								<button class="accordion ">Erste Schritte? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Muss ich mich anmelden, um eine App zu verwenden? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Wenn Sie eine App zum ersten Mal verwenden, werden Sie möglicherweise aufgefordert, Ihre Bitchilla-ID und Ihr Passwort einzugeben. Diese müssen Sie später nicht mehr eingeben, es sei denn, Sie nutzen die App auf einem anderen Computer.</p>
 								</div>
 							</div>
 							<div class="row">
 							</div>
 							<div class="accopanel">
-								<button class="accordion ">Zweite Schritte? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wo befindet sich die App, nachdem ich sie geladen habe? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Neue Apps werden auf Ihrem Mac in den Ordner "Programme" geladen, und das Symbol der App wird dem Dock hinzugefügt.</p>
 								</div>
 							</div>
 						</section>
 						<h1 class="faqsection">Support</h1>
 						<section id="support">
 							<div class="accopanel">
-								<button class="accordion ">Support <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wie lange ist mein Produkt noch abgedeckt? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Mann kann es nicht prüfen.</p>
 								</div>
 							</div>
 							<div class="row">
 							</div>
 							<div class="accopanel">
-								<button class="accordion "> Erste Schritte? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Kann ich auch als Gast bestellen? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Falls Sie kein Kundenkonto bei Bitchilla.de erstellen wollen, haben Sie die Möglichkeit als „Gast“ zu bestellen. Wenn Sie sich für diese Bestellart entscheiden, müssen Sie sich vor einer Bestellung nicht registrieren. Sie müssen zunächst nur Ihre E-Mail-Adresse angeben und im weiteren Schritt die notwenidgen Adressdaten nennen.</p>
 								</div>
 							</div>
 							<div class="row">
 							</div>
 							<div class="accopanel">
-								<button class="accordion ">Zweite Schritte? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wie funktioniert die Vorbestellung von Artikeln? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Sie haben die Möglichkeit Artikel aus den verschiedenen Produktgruppen vor dem offiziellen Erscheinungstermin bei Bitchilla vorzubestellen. Damit können Sie sich Ihr Exemplar sichern. In Einzelfällen kann es vorkommen, dass die Lieferung des Artikels nach dem Erscheinungsdatum erfolgt. Die Lieferzeit für Vorbestellungen beträgt 1 bis 2 Werktage.</p>
 								</div>
 							</div>
 						</section>
 						<h1 class="faqsection" >Bezahlungen</h1>
 						<section id="bezahlungen">
 							<div class="accopanel">
-								<button class="accordion ">Bezahlungen <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Welche Zahlungsmöglichkeiten gibt es? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Auf Bitchilla.de können Sie mit PayPal, Masterpass, Sofortüberweisung, Vorkasse, Paydirekt, Kauf auf Rechnung, mit Ihrer Kreditkarte(MasterCard, American Express und VISA).</p>
 								</div>
 							</div>
 							<div class="row">
 							</div>
 							<div class="accopanel">
-								<button class="accordion ">Bezahlungen <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Ist eine nachträgliche Erstattung des Steuerbetrages möglich? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p>Bitte beachten Sie, dass die ausschließliche Lieferung an deutsche Adressen bedingt, dass der Einkauf in unserem Onlineshop immer steuerpflichtig erfolgt.</p>
 								</div>
 							</div>
 						</section>
 						<h1 class="faqsection">Datenschutz</h1>
 						<section id="datenschutz">
 							<div class="accopanel">
-								<button class="accordion ">Datenschutz <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wie schützt Google meine Privatsphäre und hält meine Daten sicher? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Wir wissen, dass Sicherheit und Privatsphäre für Sie wichtig sind - und das ist uns auch wichtig. Wir machen es vorrangig, eine starke Sicherheit zu bieten und Ihnen das Vertrauen zu geben, dass Ihre Informationen sicher und zugänglich sind, wenn Sie es brauchen.
+										Wir arbeiten ständig daran, eine starke Sicherheit zu gewährleisten, Ihre Privatsphäre zu schützen und Google effektiver und effizienter für Sie zu machen. Wir verbringen Hunderte von Millionen Dollar jedes Jahr auf Sicherheit und beschäftigen weltberühmte Experten in der Datensicherheit, um Ihre Informationen sicher zu halten. Wir haben auch einfach zu bedienende Datenschutz- und Sicherheitstools wie Google Dashboard, 2-stufige Verifikation und Anzeigeneinstellungen erstellt. Also, wenn es um die Informationen geht, die Sie mit Google teilen, sind Sie unter Kontrolle.</p>
 								</div>
 							</div>
 							<div class="row">
 							</div>
 							<div class="accopanel">
-								<button class="accordion ">Datenschutz <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wie kann ich Informationen über mich selbst aus den Suchergebnissen von Google entfernen? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Google-Suchergebnisse sind ein Spiegelbild der Inhalte, die im Internet öffentlich zugänglich sind. Suchmaschinen können Inhalte nicht direkt von Websites entfernen, so dass das Entfernen von Suchergebnissen von Google den Inhalt nicht aus dem Internet entfernen würde. Wenn du etwas aus dem Internet entfernen möchtest, solltest du den Webmaster der Seite kontaktieren, auf den der Inhalt gepostet wird und ihn oder sie bitten, eine Änderung vorzunehmen . Sobald der Inhalt entfernt wurde und Google das Update notiert hat, werden die Informationen nicht mehr in den Suchergebnissen von Google angezeigt. Wenn Sie eine dringende Entfernung Anfrage haben, können Sie auch unsere Hilfeseite für weitere Informationen besuchen .</p>
 								</div>
 							</div>
 						</section>
 						<h1 class="faqsection">Kontakt</h1>
 						<section id="kontakt">
 							<div class="accopanel">
-								<button class="accordion ">Kontakt <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
+								<button class="accordion ">Wie kann ich Sie erreichen? <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
 								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
-								</div>
-							</div>
-							<div class="row">
-							</div>
-							<div class="accopanel">
-								<button class="accordion ">Kontakt <img class="imgrow" src="../img/arrow.png" alt="arrow"></button>
-								<div class="panel">
-									<p class="paragraphPanel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+									<p class="paragraphPanel">Bitte gucken Sie an der Footer dieser Seite </p>
 								</div>
 							</div>
 							<div class="row">
