--- a/css/GusTeam.css
+++ b/css/GusTeam.css
@@ -5,13 +5,17 @@
 
 .imgteam {
   max-width: 100%;
-
   padding: 1%;
   width: 50%;
 }
 
 .nameTeam {
   color: #22ab03;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  font-size: 150%;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
 }
 
 .profil {
@@ -19,7 +23,8 @@
   background-color: #fefefe;
   padding: 5% 7%;
   text-align: center;
-  margin-top: 30% ;
+  margin-top: 20%;
+  margin-bottom: 20%;
   background: #e9eae9;
   width: 100%;
 
@@ -27,4 +32,5 @@
 
 .teamP {
   text-align: justify;
+  padding: 5%;
 }
