--- a/views/teamH.html
+++ b/views/teamH.html
@@ -38,24 +38,31 @@ The Html and Css resources with my name are mine
 		</header>
 		<main>
 			<section class="row">
-				<section class="col-4">
+				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/mari.png" alt="mari">
 						<h1 class="nameTeam">Mari Aceña</h1>
 						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 					</div>
 				</section>
-				<section class="col-4">
+				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/Jess.png" alt="">
 						<h1 class="nameTeam">Jessica Hempel</h1>
 						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 					</div>
 				</section>
-				<section class="col-4">
+				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/Gustavo.png" alt="gustavo">
 						<h1 class="nameTeam">Gustavo Lastra</h1>
+						<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					</div>
+				</section>
+				<section class="col-3">
+					<div class="profil">
+						<img class="imgteam" src="../img/NikolaTesla.jpg" alt="gustavo">
+						<h1 class="nameTeam">Nikola Tesla</h1>
 						<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 					</div>
 				</section>
