--- a/views/GeschichteH.html
+++ b/views/GeschichteH.html
@@ -65,14 +65,14 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 						<img src="../img/cd-icon-picture.svg" alt="Picture">
 					</div> <!-- cd-timeline-img -->
 					<div class="cd-timeline-content">
-						<h2>Grundung</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<h2>Gründung von Bitchilla</h2>
+						<p>Unsere Geschichte beginnt im Jahre 2015 mit einem kleinen Projekt von den Gründern Gustavo und Jessica. Wegen der perfekt funktionierenden Zusammenarbeit...</p>
 						<button id="myBtn1" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal1" class="modal"> <!-- The Modal -->
 						  <div class="modal-content"><!-- Modal content -->
 						    <span id="s1" class="close">&times;</span>
 								<img class="imgPanel" src="../img/officebuilding.jpg" alt="building">
-						    <p>Some text in the Modal..</p>
+						    <p>Unsere Geschichte beginnt im Jahre 2015 mit einem kleinen Projekt von den Gründern Gustavo und Jessica. Wegen der perfekt funktionierenden Zusammenarbeit, der gemeinsamen Interessen und der einheitlichen Einstellungen beschlossen sie 2016 zusammen das Unternehmen zu gründen. Beide waren maßgeblich daran beteiligt ihr Unternehmen von Anfang an erfolgreich auf den Markt zu bringen. </p>
 						  </div>
 						</div>
 						<span class="cd-date">Jan 14 1963</span>
@@ -84,16 +84,16 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 						<img src="../img/cd-icon-movie.svg" alt="Movie">
 					</div>
 					<div class="cd-timeline-content">
-						<h2>Oracle becomes a partner</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+						<h2>Partnerschaft mit Oracle </h2>
+						<p>Aufgrund eines erfolgsversprechenden Konzepts war schon zu Beginn eine intensive Zusammenarbeit mit Oracle möglich...</p>
 						<button id="myBtn2" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal2" class="modal"><!-- The Modal -->
 						  <div class="modal-content"><!-- Modal content -->
 						    <span id="s2" class="close">&times;</span>
-								<video width="640" height="480" controls>
+								<video width="320" height="240" controls>
 							  <source src="../mp4/oracle.mp4" type="video/mp4">
 								</video>
-						    <p>Some text in the Modal..</p>
+						    <p>Aufgrund eines erfolgsversprechenden Konzepts war schon zu Beginn eine intensive Zusammenarbeit mit Oracle möglich. Diese Partnerschaft legt den Grundstein für die Entwicklung und Erforschung neuer und innovativer Ideen.</p>
 						  </div>
 						</div>
 						<span class="cd-date">Jan 18 1998</span>
@@ -106,13 +106,13 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 					</div>
 					<div class="cd-timeline-content">
 						<h2>Neue Filial in Guatemala</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+						<p>Dank kontinuierlicher Innovation und der Kombination von unvergleichlicher Erfahrung, umfassenden Fähigkeiten hat das Unternehmen seinen guten Ruf erworben. So konnten das Unternehmen ...</p>
 						<button id="myBtn3" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal3" class="modal"><!-- The Modal -->
 						  <div class="modal-content"><!-- Modal content -->
 								<span id="s3" class="close">&times;</span>
 								<img class="imgPanel" src="../img/GuateFilial.png" alt="guatefilial">
-						    <p>Some text in the Modal..</p>
+						    <p>Dank kontinuierlicher Innovation und der Kombination von unvergleichlicher Erfahrung, umfassenden Fähigkeiten hat das Unternehmen seinen guten Ruf erworben. So konnten das Unternehmen sein Angebot erweitern und eine neue Filiale in Guatemala eröffnen. </p>
 						  </div>
 						</div>
 						<span class="cd-date">Jan 24</span>
@@ -125,13 +125,13 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 					</div> <!-- cd-timeline-img -->
 					<div class="cd-timeline-content">
 						<h2>"Beste Arbeitsatmosphäre" -Nicola Tesla </h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<p>Im Laufe der Geschichte hat das Unternehmen sein Angebot erweitert und auf die Entwicklung innovativer Technologien gebaut, um für seine Kunden bestmögliche Ergebnisse zu erzielen. Dazu haben sie einen professionellen Berater...</p>
 						<button id="myBtn4" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal4" class="modal"><!-- The Modal -->
 							<div class="modal-content"><!-- Modal content -->
 								<span id="s4" class="close">&times;</span>
 								<img class="imgPanel" src="../img/arbeitsatmosphäre.png" alt="Picture">
-						    <p>Some text in the Modal..</p>
+						    <p>Im Laufe der Geschichte hat das Unternehmen sein Angebot erweitert und auf die Entwicklung innovativer Technologien gebaut, um für seine Kunden bestmögliche Ergebnisse zu erzielen. Dazu haben sie einen professionellen Berater an Bord geholt: Nicola Tesla. Er ergänzt das interkulturelle Team bringt das Unternehmen durch seinen großen Erfahrungsschatz einen großen Schritt weiter.</p>
 						  </div>
 						</div>
 						<span class="cd-date">Feb 14</span>
@@ -143,14 +143,14 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 						<img src="../img/cd-icon-location.svg" alt="Location">
 					</div> <!-- cd-timeline-img -->
 					<div class="cd-timeline-content">
-						<h2>Neue Filiale in Mexiko</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+						<h2>Neue Filiale in Mexiko </h2>
+						<p>Das Unternehmen konnte sich innerhalb kürzester Zeit ...</p>
 						<button id="myBtn5" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal5" class="modal"><!-- The Modal -->
 							<div class="modal-content"><!-- Modal content -->
 								<span id="s5" class="close">&times;</span>
 								<img class="imgPanel" src="../img/mexico.png" alt="atmo">
-								<p>Some text in the Modal..</p>
+								<p>Das Unternehmen konnte sich innerhalb kürzester Zeit am Markt etablieren und erzielte Ende 2016 schon einen Umsatz von 5 Millionen Euro. Aufgrund dieses großen Erfolgs konnte das Unternehmen seine zweite Filiale in Mexiko eröffnen.</p>
 							</div>
 						</div>
 						<span class="cd-date">Feb 18</span>
@@ -162,14 +162,14 @@ Google.png : https://de.wikipedia.org/wiki/Datei:Google_%22G%22_Logo.svg
 						<img src="../img/cd-icon-picture.svg" alt="Picture">
 					</div>
 					<div class="cd-timeline-content">
-						<h2>Bichilla becames Google's owner</h2>
-						<p>This is the content of the last section</p>
+						<h2>Google Partnerschaft </h2>
+						<p>Die Entwicklung innovativer Technologien, ein erfolgreiches Konzept und harte Arbeit ermöglichten schließlich eine Partnerschaft mit Google. Dank dieser ...</p>
 						<button id="myBtn6" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
 						<div id="myModal6" class="modal"><!-- The Modal -->
 							<div class="modal-content"><!-- Modal content -->
 								<span id="s6" class="close">&times;</span>
 								<img class="imgPanel" src="../img/Google.png" alt="">
-						    <p>Some text in the Modal..</p>
+						    <p>Die Entwicklung innovativer Technologien, ein erfolgreiches Konzept und harte Arbeit ermöglichten schließlich eine Partnerschaft mit Google. Dank dieser bahnbrechenden Partnerschaft steht der Entwicklung zukünftiger innovativer Technologien nichts mehr im Weg.</p>
 						  </div>
 						</div>
 						<span class="cd-date">Feb 26</span>
