--- a/views/teamH.html
+++ b/views/teamH.html
@@ -42,28 +42,32 @@ The Html and Css resources with my name are mine
 					<div class="profil">
 						<img class="imgteam" src="../img/mari.png" alt="mari">
 						<h1 class="nameTeam">Mari Aceña</h1>
-						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<h4>Chief Executive Officer (CEO)</h4>
+						<p class="teamP">Maria ist 20 Jahre alt und kommt aus Guatemala. Zurzeit studiert sie an der TU Ilmenau und macht ihren Bachelor in Angewandte Medien- und Kommunikationswissenschaft. Ihre fundierte Erfahrung in der Entwicklung verschiedener Projekte und ihre innovative Denkweise macht sie zur führenden Kraft in unseren Unternehmen.</p>
 					</div>
 				</section>
 				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/Jess.png" alt="">
 						<h1 class="nameTeam">Jessica Hempel</h1>
-						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<h4>Software Entwickler und Gründer</h4>
+						<p class="teamP">Mit nur 24 Jahren gründet sie zusammen mit Gustavo die Firma. Sie ist Projektleiterin und verbringt ihre Tage damit das Internet zu einem angenehmeren Ort zu machen, indem sie Webseiten entwickelt und verwaltet. Das spiegelt sich auch in ihrem Studium wieder, denn im Moment macht sie ihren Master in Medientechnologie an der TU Ilmenau.</p>
 					</div>
 				</section>
 				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/Gustavo.png" alt="gustavo">
 						<h1 class="nameTeam">Gustavo Lastra</h1>
-						<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<h4>Senior Frontend Developer und Gründer</h4>
+						<p class="teamP" >Gustavo ist Softwareentwickler und arbeitet seit zwei Jahren mit Jessica zusammen an verschiedenen Projekten. Zusammen habe sie Bitchilla gegründet. Seine Erfahrung und Kreativität trägt im Wesentlichen zum Erfolg des Unternehmens bei. Hier macht er genau wie Jessica seinen Master in Medientechnologie an der TU Ilmenau.</p>
 					</div>
 				</section>
 				<section class="col-3">
 					<div class="profil">
 						<img class="imgteam" src="../img/NikolaTesla.jpg" alt="gustavo">
 						<h1 class="nameTeam">Nikola Tesla</h1>
-						<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<h4>Erfinder, Physiker und Elektroingenieur.</h4>
+						<p class="teamP">Sein Lebenswerk ist geprägt durch zahlreiche Neuerungen auf dem Gebiet der Elektrotechnik, insbesondere der elektrischen Energietechnik, wie die Entwicklung des heute als Zweiphasenwechselstrom bezeichneten Systems zur elektrischen Energieübertragung. Tesla hat in 26 Ländern 280 Patente erhalten.</p>
 					</div>
 				</section>
 			</section>
